updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I work for healthcare company.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm orginally from Florida but just moved down to Nashville from Wisconsin.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Outdoor recreations; hiking, biking, kayaking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To become a web developer for a large company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Hermitage, Tennessee</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a person in demand by companies, not the other way around.</p>
     </section>
 
     <footer id="footer">
